--- a/pom.xml
+++ b/pom.xml
@@ -2,10 +2,10 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>com.test</groupId>
 	<artifactId>maven-release-plugin-example</artifactId>
-	<version>0.1</version>
+	<version>0.1-SNAPSHOT</version>
 	<scm>
-		<url>https://github.com/gaurav14u/maven-release-plugin-example</url>
-		<connection>scm:git:https://github.com/gaurav14u/maven-release-plugin-example.git</connection>
+		<url>git@github.com:gaurav14u/maven-release-plugin-example.git</url>
+		<connection>scm:git@github.com:gaurav14u/maven-release-plugin-example.git</connection>
       <tag>v0.1</tag>
   </scm>
 	
